<resources>
    <string name="app_name">Dou Ban Jiang</string>
    <string name="defaultName">please login</string>
    <string name="menu_favorite"><font color="#454545"><font size="22">Your Watchlist</font></font></string>
    <string name="menu_history"><font color="#454545"><font size="22">Your History</font></font></string>
    <string name="menu_comment"><font color="#454545"><font size="22">Your Comment</font></font></string>
    <string name="menu_help"><font color="#454545"><font size="20">Economical Help</font></font></string>
    <string name="menu_signout"><font color="#454545"><font size="20">&#x0020;&#x0020;&#x0020;&#x0020;Sign Out</font></font></string>
    <string name="menu_logAndReg"><font color="#454545"><font size="20">Login/Register</font></font></string>
    <string name="username_hint">please type in your username</string>
    <string name="password_hint">please type in your password</string>
    <string name="confirm_password_hint">please confirm your password</string>

    <string name="lhtnmsl">Cancel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="Recommend">Recommend</string>
    <string name="Action">Action</string>
    <string name="Adventure">Adventure</string>
    <string name="Romance">Romance</string>
    <string name="Comedy">Comedy</string>
    <string name="Crime">Crime</string>
    <string name="TopRates">Top Rates</string>
    <string name="Mypath">"http://192.168.0.139:8081/MoviesGuideApp/movie_operation.php"</string>

</resources>
