<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signIn_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@color/White"
    android:orientation="vertical"
    app:layout_constraintHeight_percent="0.9"
    app:layout_constraintTop_toBottomOf="@+id/signUp_signIn_title">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/account_EditText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_background"
            android:layout_marginBottom="30dp"
            android:hint="@string/username_hint"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="@color/Black"
            android:textColorHint="@color/Gray" />

        <EditText
            android:id="@+id/password_EditText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_background"
            android:layout_marginBottom="30dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="@color/Black"
            android:textColorHint="@color/Gray" />

        <EditText
            android:id="@+id/confirm_password_EditText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_background"
            android:layout_marginBottom="30dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="@color/Black"
            android:textColorHint="@color/Gray" />

        <Button
            android:id="@+id/signIn_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_signIn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Have an account?"
            android:textColor="@color/Black"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/signInTo_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Sign Up"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>
